test/libhyperion/syntaxTests/array/copy_storage_arrays_of_function_type.hyp
contract C {
    function() external [] s0;
    function() external view [] s1;
    function copyStorageArrayOfFunctionType() public {
        s1 = s0;
    }
}
// ----
// TypeError 4888: (17-42): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
